# aws-lambda-emailsender-rust

./: Cargo.toml  README.md
src/: main.rs
